--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-leaflet": "^2.1.4",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
     "react-select": "^2.2.0",
     "xml-js": "^1.6.9"
   },
